# url-shortner-rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml  release.yml  test.yml
frontend/: package.json
frontend/src/: app.html
frontend/src/routes/: __layout.svelte  index.svelte
src/: main.rs
