[package]
name = "url_shortener"
version = "0.1.0"
edition = "2018"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
rand = "0.8.4"
rocket = "0.5.0-rc.1"

[profile.release]
lto = "fat"
